Update release-drafter.yml 2
change 'change-title-escapes'
change 'change-template'

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -12,7 +12,8 @@ categories:
       - 'bug'
   - title: '🧰 Maintenance'
     label: 'chore'
-change-template: '- $NUMBER $TITLE ($URL) \\n\\t[$BODY]    - $TITLE @$AUTHOR (#$NUMBER)'
+change-template: '- $TITLE ($URL) //n//t $BODY'
+change-title-escapes: '\<>*_&'
 template: |
   ## Changes
 
